# backend/api/gen/go/system/admin/v1/base_migration_grpc.pb.go
@@ -1,0 +1,168 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.2
+// - protoc             (unknown)
+// source: system/admin/v1/base_migration.proto
+
+package adminv1
+
+import (
+	context "context"
+
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	BaseMigrationService_PageBaseMigration_FullMethodName = "/system.admin.v1.BaseMigrationService/PageBaseMigration"
+	BaseMigrationService_GetBaseMigration_FullMethodName  = "/system.admin.v1.BaseMigrationService/GetBaseMigration"
+)
+
+// BaseMigrationServiceClient is the client API for BaseMigrationService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// 数据库迁移服务
+type BaseMigrationServiceClient interface {
+	// 分页查询数据库升级历史
+	PageBaseMigration(ctx context.Context, in *PageBaseMigrationRequest, opts ...grpc.CallOption) (*PageBaseMigrationResponse, error)
+	// 查询数据库迁移记录详情
+	GetBaseMigration(ctx context.Context, in *GetBaseMigrationRequest, opts ...grpc.CallOption) (*BaseMigration, error)
+}
+
+type baseMigrationServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewBaseMigrationServiceClient(cc grpc.ClientConnInterface) BaseMigrationServiceClient {
+	return &baseMigrationServiceClient{cc}
+}
+
+func (c *baseMigrationServiceClient) PageBaseMigration(ctx context.Context, in *PageBaseMigrationRequest, opts ...grpc.CallOption) (*PageBaseMigrationResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(PageBaseMigrationResponse)
+	err := c.cc.Invoke(ctx, BaseMigrationService_PageBaseMigration_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *baseMigrationServiceClient) GetBaseMigration(ctx context.Context, in *GetBaseMigrationRequest, opts ...grpc.CallOption) (*BaseMigration, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(BaseMigration)
+	err := c.cc.Invoke(ctx, BaseMigrationService_GetBaseMigration_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// BaseMigrationServiceServer is the server API for BaseMigrationService service.
+// All implementations must embed UnimplementedBaseMigrationServiceServer
+// for forward compatibility.
+//
+// 数据库迁移服务
+type BaseMigrationServiceServer interface {
+	// 分页查询数据库升级历史
+	PageBaseMigration(context.Context, *PageBaseMigrationRequest) (*PageBaseMigrationResponse, error)
+	// 查询数据库迁移记录详情
+	GetBaseMigration(context.Context, *GetBaseMigrationRequest) (*BaseMigration, error)
+	mustEmbedUnimplementedBaseMigrationServiceServer()
+}
+
+// UnimplementedBaseMigrationServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedBaseMigrationServiceServer struct{}
+
+func (UnimplementedBaseMigrationServiceServer) PageBaseMigration(context.Context, *PageBaseMigrationRequest) (*PageBaseMigrationResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method PageBaseMigration not implemented")
+}
+func (UnimplementedBaseMigrationServiceServer) GetBaseMigration(context.Context, *GetBaseMigrationRequest) (*BaseMigration, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetBaseMigration not implemented")
+}
+func (UnimplementedBaseMigrationServiceServer) mustEmbedUnimplementedBaseMigrationServiceServer() {}
+func (UnimplementedBaseMigrationServiceServer) testEmbeddedByValue()                              {}
+
+// UnsafeBaseMigrationServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to BaseMigrationServiceServer will
+// result in compilation errors.
+type UnsafeBaseMigrationServiceServer interface {
+	mustEmbedUnimplementedBaseMigrationServiceServer()
+}
+
+func RegisterBaseMigrationServiceServer(s grpc.ServiceRegistrar, srv BaseMigrationServiceServer) {
+	// If the following call panics, it indicates UnimplementedBaseMigrationServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&BaseMigrationService_ServiceDesc, srv)
+}
+
+func _BaseMigrationService_PageBaseMigration_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(PageBaseMigrationRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BaseMigrationServiceServer).PageBaseMigration(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: BaseMigrationService_PageBaseMigration_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BaseMigrationServiceServer).PageBaseMigration(ctx, req.(*PageBaseMigrationRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _BaseMigrationService_GetBaseMigration_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetBaseMigrationRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BaseMigrationServiceServer).GetBaseMigration(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: BaseMigrationService_GetBaseMigration_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BaseMigrationServiceServer).GetBaseMigration(ctx, req.(*GetBaseMigrationRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// BaseMigrationService_ServiceDesc is the grpc.ServiceDesc for BaseMigrationService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var BaseMigrationService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "system.admin.v1.BaseMigrationService",
+	HandlerType: (*BaseMigrationServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "PageBaseMigration",
+			Handler:    _BaseMigrationService_PageBaseMigration_Handler,
+		},
+		{
+			MethodName: "GetBaseMigration",
+			Handler:    _BaseMigrationService_GetBaseMigration_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "system/admin/v1/base_migration.proto",
+}
