# backend/api/gen/go/system/admin/v1/base_migration_http.pb.go
@@ -1,0 +1,125 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v3.0.0
+// - protoc             (unknown)
+// source: system/admin/v1/base_migration.proto
+
+package adminv1
+
+import (
+	context "context"
+
+	http "github.com/go-kratos/kratos/v3/transport/http"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+
+const _ = http.SupportPackageIsVersion3
+
+const OperationBaseMigrationServiceGetBaseMigration = "/system.admin.v1.BaseMigrationService/GetBaseMigration"
+const OperationBaseMigrationServicePageBaseMigration = "/system.admin.v1.BaseMigrationService/PageBaseMigration"
+
+type BaseMigrationServiceHTTPServer interface {
+	// GetBaseMigration 查询数据库迁移记录详情
+	GetBaseMigration(context.Context, *GetBaseMigrationRequest) (*BaseMigration, error)
+	// PageBaseMigration 分页查询数据库升级历史
+	PageBaseMigration(context.Context, *PageBaseMigrationRequest) (*PageBaseMigrationResponse, error)
+}
+
+func RegisterBaseMigrationServiceHTTPServer(s *http.Server, srv BaseMigrationServiceHTTPServer) {
+	r := s.Route("/")
+	r.Handle("GET", "/api/v1/admin/base-migration", _BaseMigrationService_PageBaseMigration0_HTTP_Handler(srv))
+	r.Handle("GET", "/api/v1/admin/base-migration/{id}", _BaseMigrationService_GetBaseMigration0_HTTP_Handler(srv))
+}
+
+func _BaseMigrationService_PageBaseMigration0_HTTP_Handler(srv BaseMigrationServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in PageBaseMigrationRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationBaseMigrationServicePageBaseMigration)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.PageBaseMigration(ctx, req.(*PageBaseMigrationRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*PageBaseMigrationResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _BaseMigrationService_GetBaseMigration0_HTTP_Handler(srv BaseMigrationServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetBaseMigrationRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationBaseMigrationServiceGetBaseMigration)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetBaseMigration(ctx, req.(*GetBaseMigrationRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*BaseMigration)
+		return ctx.Result(200, reply)
+	}
+}
+
+type BaseMigrationServiceHTTPClient interface {
+	// GetBaseMigration 查询数据库迁移记录详情
+	GetBaseMigration(ctx context.Context, req *GetBaseMigrationRequest, opts ...http.CallOption) (rsp *BaseMigration, err error)
+	// PageBaseMigration 分页查询数据库升级历史
+	PageBaseMigration(ctx context.Context, req *PageBaseMigrationRequest, opts ...http.CallOption) (rsp *PageBaseMigrationResponse, err error)
+}
+
+type BaseMigrationServiceHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewBaseMigrationServiceHTTPClient(client *http.Client) BaseMigrationServiceHTTPClient {
+	return &BaseMigrationServiceHTTPClientImpl{client}
+}
+
+// GetBaseMigration 查询数据库迁移记录详情
+func (c *BaseMigrationServiceHTTPClientImpl) GetBaseMigration(ctx context.Context, in *GetBaseMigrationRequest, opts ...http.CallOption) (*BaseMigration, error) {
+	var out BaseMigration
+	pattern := "/api/v1/admin/base-migration/{id}"
+	path := http.BuildPath(pattern, in, http.WithQueryParams())
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.Operation(OperationBaseMigrationServiceGetBaseMigration),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// PageBaseMigration 分页查询数据库升级历史
+func (c *BaseMigrationServiceHTTPClientImpl) PageBaseMigration(ctx context.Context, in *PageBaseMigrationRequest, opts ...http.CallOption) (*PageBaseMigrationResponse, error) {
+	var out PageBaseMigrationResponse
+	pattern := "/api/v1/admin/base-migration"
+	path := http.BuildPath(pattern, in, http.WithQueryParams())
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.Operation(OperationBaseMigrationServicePageBaseMigration),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
