# backend/pkg/gen/models/base_migration.gen.go
@@ -1,0 +1,28 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package models
+
+import (
+	"time"
+)
+
+const TableNameBaseMigration = "base_migration"
+
+// BaseMigration 数据库迁移记录
+type BaseMigration struct {
+	ID          int64     `gorm:"column:id;type:bigint;primaryKey;autoIncrement:true;comment:主键ID" json:"id"` // 主键ID
+	Business    string    `gorm:"column:business;type:varchar(20);comment:迁移业务" json:"business"`              // 迁移业务
+	Version     string    `gorm:"column:version;type:varchar(50);comment:迁移版本" json:"version"`                // 迁移版本
+	UpSql       string    `gorm:"column:up_sql;type:longtext;comment:升级脚本" json:"up_sql"`                     // 升级脚本
+	DownSql     string    `gorm:"column:down_sql;type:longtext;comment:回退脚本" json:"down_sql"`                 // 回退脚本
+	Description string    `gorm:"column:description;type:longtext;comment:升级描述" json:"description"`           // 升级描述
+	IsSuccess   bool      `gorm:"column:is_success;type:tinyint(1);comment:是否成功" json:"is_success"`           // 是否成功
+	CreatedAt   time.Time `gorm:"column:created_at;type:datetime;comment:创建时间" json:"created_at"`             // 创建时间
+}
+
+// TableName BaseMigration's table name
+func (*BaseMigration) TableName() string {
+	return TableNameBaseMigration
+}
